Solve problem with images not showing for embedded videos

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,72 @@
 /* root */
+:root {
+  --primary: #eceff1;
+  --secondary: #01579b;
+  --accent: #546e7a;
+}
+
 * {
   box-sizing: border-box;
 }
 
-/* tags */
+/* types */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 a {
+  color: var(--secondary);
   text-decoration: none;
 }
 a:hover {
-  color: rgb(255, 0, 0);
+  color: var(--accent);
   text-decoration: underline;
 }
 
-/* components */
-.container {
+a:focus {
+  outline: thin dotted;
+  border: #595959;
+}
+
+nav {
+  min-height: 60px;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+label {
+  font-size: 16px;
+  color: #595959;
+  line-height: 1.2;
+  padding: 5px;
+  margin: 5px;
+}
+
+input {
+  font: inherit;
+  display: block;
+  font-size: 14px;
+  color: #555;
+  line-height: 1.2;
+  padding: 5px;
+  margin: 5px;
+}
+
+input:focus {
+  outline: var(--primary);
+  color: var(--accent);
+}
+
+/* classes */
+.main {
   padding: 5px;
   margin: auto;
 }
@@ -36,24 +89,6 @@ a:hover {
   font-size: 20px;
 }
 
-label {
-  font-size: 16px;
-  color: #999;
-  line-height: 1.2;
-  padding: 5px;
-  margin: 5px;
-}
-
-input {
-  font: inherit;
-  display: block;
-  font-size: 15px;
-  color: #555;
-  line-height: 1.2;
-  padding: 5px;
-  margin: 5px;
-}
-
 .btn {
   background-color: transparent;
   min-width: 64px;
@@ -72,6 +107,11 @@ input {
 .btn:hover {
   text-decoration: none;
   background-color: rgba(0, 0, 0, 0.04);
+}
+
+.btn:focus {
+  outline: double;
+  border: #f11010;
 }
 
 .content {
